--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
+# Email Configuration
+# This is the email address that will receive the contact form submissions.
+EMAIL_TO="revithkumar580@gmail.com"
+
+# This is the "from" address that will appear in the email.
+# For Gmail, this should be your full Gmail address.
+EMAIL_FROM="revithkumar580@gmail.com"
+
+# SMTP Server Details for Gmail
+# The user, from address, and password must be filled in below.
+EMAIL_SERVER_HOST="smtp.gmail.com"
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER="revithkumar580@gmail.com"
+EMAIL_SERVER_PASSWORD="fwntfrtxcumggped"
 
